# visual-page-editor-rust

./: Cargo.toml  LICENSE  README.md
src/: app.rs  canvas.rs  main.rs  page_xml.rs  ui.rs
